--- a/GoogleService-Info.plist
+++ b/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.techsoft.LocalGuide</string>
+	<string>com.techsoft.localguides</string>
 	<key>PROJECT_ID</key>
 	<string>localguide-ca222</string>
 	<key>STORAGE_BUCKET</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:910659038620:ios:769f7cad5b4a8323aeec59</string>
+	<string>1:910659038620:ios:9799918e1f71a70eaeec59</string>
 </dict>
 </plist>
