--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,4 @@ node_modules/
 
 # dataconnect generated files
 .dataconnect
+LocalGuide.xcodeproj/xcuserdata/cristinaflorea.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
