added to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,5 @@ node_modules/
 # dataconnect generated files
 .dataconnect
 LocalGuide.xcodeproj/xcuserdata/cristinaflorea.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+LocalGuide.xcodeproj/xcuserdata/cristinaflorea.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+/LocalGuide.xcodeproj/xcuserdata/cristinaflorea.xcuserdatad/xcdebugger
